<resources>
    <string name="app_name" translatable="false">NTK.Android.BaseActivity</string>
    <string-array name="StateTicket">
        <item>معمولی</item>
        <item>مهم</item>
        <item>ضروری</item>
    </string-array>

    <string name="sweet_app_name">SweetAlertDialog</string>
    <string name="sweet_dialog_default_title">Here\'s a message!</string>
    <string name="sweet_dialog_ok">OK</string>
    <string name="sweet_dialog_cancel">Cancel</string>
    <string name="sweet_LOADING">Loading...</string>
    <string name="per_download_link">لینک دانلود:</string>
    <string name="per_share_to">به اشتراک گزاری با....</string>
    <string name="per_success">با موفقیت ثبت شد</string>
    <string name="per_push_back">برای خروج مجددا کلید بازگشت را فشار دهید</string>
    <string name="per_notice">توجه</string>
    <string name="per_update_version">نسخه جدید اپلیکیشن اومده دوست داری آبدیت بشه؟؟</string>
    <string name="per_update_version2">نسخه جدید اپلیکیشن اومده حتما باید آبدیت بشه</string>
    <string name="per_link_download">لینک دانلود فایل نصبی</string>
    <string name="per_link_download2">لینک دانلود برنامه</string>
    <string name="per_link">لینک دانلود:</string>
    <string name="per_shareto">به اشتراک گزاری با....</string>
    <string name="per_insert_comment">لطفا نظر خود را وارد نمایید</string>
    <string name="per_no_net">عدم دسترسی به اینترنت</string>
    <string name="per_navigate_login">َشما به صفحه ی ورود کاربر هدایت می شوید</string>
    <string name="article_custom_title">طرز تهیه</string>
    <string name="per_insert_num">لطفا مقادیر را وارد نمایید</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="error_raised">خطای سامانه مجددا تلاش کنید</string>
    <string name="success_comment">نظر شما با موفقیت ثبت شد</string>
    <string name="Description">توضیحات</string>
    <string name="biography">بیوگرافی</string>
    <string name="source">منبع</string>
    <string name="plz_insert_num">شماره تلفن همراه خود را وارد نمایید</string>
    <string name="plz_insert_capcha">متن کپچا را وارد نمایید</string>
    <string name="plz_insert_mobile_correct">شماره تلفن همراه را به صورت صحیح وارد کنید</string>
    <string name="plz_insert_code_login">\" کد اعتبار سنجی که برایتان ارسال می شود را وارد کنید\"</string>
    <string name="plz_insert_code">کد اعتبار سنجی را وارد نمایید</string>
    <string name="code_sent_again">کد اعتبار سنجی مجددا ارسال شد</string>
    <string name="login_code">کد اعتبار سنجی</string>
    <string name="Continue_string">ادامــه</string>
    <string name="send_login_code_again">\"ارسال مجدد کد اعتبار سنجی \"</string>
    <string name="plz_wait_recieve_code">\" لطفا منتظر دریافت کد اعتبار سنجی بمانید \"</string>
    <string name="address">آدرس</string>
    <string name="contact_us">تماس با ما</string>
    <string name="call_number">\"َشماره تلفن تماس \"</string>
    <string name="fax_numebr">َشماره فکس</string>
    <string name="email">\"ایمیل \"</string>
    <string name="current_version">نسخه ی کنونی :</string>
    <string name="version_number">نسخه ی </string>
    <string name="start">شروع</string>
    <string name="next">بعدی</string>
    <string name="plz_insert_password">کلمه عبور را وارد نمایید</string>
    <string name="passowrd_not_same">مقادیر ورودی کلمه عبور برابر نیستند</string>
    <string name="no_new_message">پیامی برای نمایش وجود ندارد</string>
    <string name="pollings">نظرسنجی ها</string>
    <string name="faq">پرسش های متداول</string>
    <string name="plz_insert_ticket_subject">موضوع درخواست خود را وارد کنید</string>
    <string name="plz_insert_ticket_desc">متن درخواست خود را وارد کنید</string>
    <string name="plz_insert_name">نام و نام خانوادگی را وارد کنید</string>
    <string name="plz_insert_email">ایمیل خود را وارد نمایید</string>
    <string name="plz_insert_email_correctly">آدرس پست الکترونیکی صحیح نمیباشد</string>
    <string name="plz_insert_email_departman">بخش مربوطه را انتخاب نمایید</string>
    <string name="plz_insert_parioty">میزان اهمیت درخواست خود را انتحاب نمایید</string>
    <string name="ticket_number">\"َشماره درخواست : \"</string>
    <string name="ticket_answer">\"پاسخ تیکت  \"</string>
    <string name="notice_delete_notification">پیام مورد نظر حذف گردد؟</string>
    <string name="delete_notification">پیام مورد نظر حذف گردید</string>
    <string name="number_string">\"شماره ی \"</string>
    <string name="answer_mode">پاسخ داده شد</string>
    <string name="inProcess_mode">در حال رسیدگی</string>
    <string name="waiting_mode">انتظار پاسخ</string>
    <string name="customer_answer_mode">پاسخ مشتری</string>
    <string name="close_mode">بسته شد</string>
    <string name="no_value_selected">مقداری انتخاب نشده است</string>
    <string name="is_string">\" می باشد\"</string>
    <string name="max_vote">\"حداکثز تعداد پاسخ مجاز برای این نظر سنجی \"</string>
    <string name="ntk_error">خطای Ntk رخ داد</string>
    <string name="plz_check_network">لطفا وضعیت شبکه خود را چک کنید</string>
    <string name="file_number">\" فایل شماره \"</string>
    <string name="download_url_not_exist">فایلی جهت نمایش وجود ندارد</string>
    <string name="max_vote_each_item">\"حداکثر تعداد انتخاب مجاز برای هر گزینه \"</string>
    <string name="max_vote_poll">\"حداکثر تعداد انتخاب  برای این نظر سنجی \"</string>
    <string name="no_negative_vote">امکان دادن امتیاز منفی وجود ندارد</string>
    <string name="back">بازگشت</string>
    <string name="loading">در حال دریافت اطلاعات</string>
    <string name="poling">نظرسنجی</string>
    <string name="blog">وبلاگ</string>
    <string name="number_seen">تعداد مشاهدات:</string>
    <string name="comments">نظرات</string>
    <string name="similar">موارد مشابه</string>
    <string name="all_list">لیست کامل</string>
    <string name="order_food">دستور آشپزی</string>
    <string name="three_dot">...</string>
    <string name="food_value">ارزش غذایی</string>
    <string name="more_pic">عکس بیشتر</string>
    <string name="time_min">... دقیقه</string>
    <string name="time_ready">زمان آمادسازی</string>
    <string name="rest_time">زمان استراحت</string>
    <string name="cook_time">زمان پخت</string>
    <string name="similar_order">دستورات مشابه</string>
    <string name="similar_category">دسته بندی مشابه</string>
    <string name="more">بیشتر</string>
    <string name="submit_mobile">تایید شماره تلفن همراه</string>
    <string name="submit_num">تایید شماره</string>
    <string name="user_login">ورود کاربر</string>
    <string name="forget_pass">فراموشی رمز عبور</string>
    <string name="notification_inbox">صندوق پیام</string>
    <string name="sign_up">ثبت نام کاربر</string>
    <string name="not_interested">تمایلی ندارم</string>
    <string name="login">ورود</string>
    <string name="ignore">صرف نظر</string>
    <string name="send_feedback">ثبت بازخورد</string>
    <string name="submit">ثبت</string>
    <string name="send">ارسال</string>
    <string name="send_comment">ارسال نظر</string>
    <string name="file_list">لیست فایل ها</string>
    <string name="close">بستن</string>
    <string name="ok">باشه</string>
    <string name="resutl_poll">نتیجه نظرسنجی</string>
    <string name="vote_count">تعداد آرا :</string>
    <string name="person_count">تعداد نفر :</string>
    <string name="share_with_others">اشتراک گذاری با سایر موارد ....</string>
    <string name="Cancel">انصراف</string>
    <string name="question">سوال</string>
    <string name="result">نتایج</string>
    <string name="answer">پاسخ</string>
    <string name="list_is_empty">لیست خالی است</string>
    <string name="no_answers">پاسخی ارسال نشده است</string>
    <string name="attach_files">فایل های پیوست</string>
    <string name="send_answer">ارسال پاسخ</string>
    <string name="new_ticket">ارسال تیکت جدید</string>
    <string name="send_ticket">ارسال درخواست</string>
    <string name="details">جزئیات</string>
    <string name="active">فعال</string>
    <string name="fullName">نام و نام خانوادگی</string>
    <string name="build_number">نگارش </string>
    <string name="splashGetTokenStep">در حال گرفتن توکن</string>
    <string name="splashGetCurrentAppStep">در حال گرفتن اطلاعات برنامه</string>
    <string name="splashGetUserInformationStep">در حال دریافت اطلاعات کاربری</string>
    <string name="splashGetTheme">در حال دریافت قالب</string>
    <string name="splashRenewToken">در حال بررسی احراز هویت</string>
    <string name="sorting">به ترتیب . . .</string>
    <string name="send_report">ارسال گزارش</string>
</resources>