<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/circle_red_full"
            android:contentDescription="@null">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:src="@drawable/profile" />

        </RelativeLayout>

        <TextView
            android:id="@+id/lblVerificationActRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/user_login"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <EditText
                android:id="@+id/txtActRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:hint="_   _   _   _   _   _   _   _   _   _"
                android:inputType="phone"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPassRegister"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtpass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="کلمه ی عبور"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:id="@+id/passToggle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/toggle_show" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <ntk.android.base.view.CaptchaView
                android:id="@+id/captchaView"
                android:layout_width="match_parent"
                android:layout_height="55dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardActRegister"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#1fbf00"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <Button
                android:id="@+id/btnActRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/submit_num"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/RowForgotPasswordActLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblForgotPassActLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:text="@string/forget_pass"
                android:textColor="#a3a2a2"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/circle_gray_empty">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_arrow_right"
                    app:tint="#afafaf" />
            </RelativeLayout>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressActRegister"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
